<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OPR.MainActivity_OPR"
    tools:showIn="@layout/activity_main_map">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <org.osmdroid.views.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!--<AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/source_location"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"/>-->

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        card_view:cardCornerRadius="4dp">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/source_location_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/source_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="-40dp"
                android:height="50dp"
                android:background="@drawable/rectangle_drawable" />

            <TextView
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="@+id/source_location"
                android:layout_gravity="center"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="14dp"
                android:text="@string/pickup"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/pickupblue"
                android:textSize="14dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:text="..."
            android:textAlignment="center"
            android:rotation="-90"
            android:layout_gravity="center|start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray"
            android:textSize="30dp"
            android:textStyle="bold" />

        <View
            android:layout_width="268dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="36dp"
            android:background="@color/lightgray" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/source_destination_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/source_destination"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="60dp"
                android:height="50dp"
                android:background="@drawable/rectangle_drawable" />

            <TextView
                android:id="@+id/drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/source_destination"
                android:layout_alignParentLeft="@+id/source_destination"
                android:layout_gravity="center"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="14dp"
                android:text="@string/drop"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dropyellow"
                android:textSize="14dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
    <!--android:text="Large Text"-->
    <!--android:id="@+id/textView"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:layout_marginBottom="10dp"/>-->

    <Button
        android:id="@+id/btncheckin"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-51dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ovel_drawable"
        android:text="@string/findmydriver"
        android:textColor="#FFFFFF"
        android:textAllCaps="false" />

    <!--<android.support.design.widget.CoordinatorLayout-->
    <!--android:id="@+id/main_content"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="bottom|right"-->
    <!--android:layout_margin="16dp"-->
    <!--app:layout_anchorGravity="bottom|right|end" />-->

    <!--</android.support.design.widget.CoordinatorLayout>-->

</RelativeLayout>
