<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OPR.UserMain">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_accident"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="Traffic Jam"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30dp"
                    android:textStyle="normal"
                    android:typeface="sans" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/form_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/form_card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/text_location"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="Location"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textSize="16sp"
                                android:textStyle="normal"
                                android:typeface="sans" />

                            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                                android:id="@+id/input_location"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/text_situation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Situation"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            android:typeface="sans" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/layout_standstill">

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:layout_weight="1">

                                <CheckBox
                                    android:id="@+id/checkbox_standstill"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Standstill" />

                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/layout_moderate"
                            android:layout_below="@id/layout_standstill">

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:layout_weight="1">

                                <CheckBox
                                    android:id="@+id/checkbox_moderate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Moderate" />

                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/layout_moderate">

                            <RelativeLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:layout_weight="1">

                                <CheckBox
                                    android:id="@+id/checkbox_heavy"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Heavy" />

                            </RelativeLayout>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="300dp">

                            <ImageView
                                android:id="@+id/image1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="20dp"
                                android:background="@drawable/address"
                                android:scaleType="centerCrop"
                                android:adjustViewBounds="true" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <Button
                            android:id="@+id/btnupload"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="-100dp"
                            android:layout_marginBottom="40dp"
                            android:background="@drawable/rectangle_button_drawable"
                            android:backgroundTint="@color/light_gray"
                            android:text="@string/upload"
                            android:textAllCaps="false"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnoffer"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="-100dp"
                            android:layout_marginBottom="40dp"
                            android:background="@drawable/rectangle_button_drawable"
                            android:text="@string/report"
                            android:textAllCaps="false"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btnlater"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="-100dp"
                            android:layout_marginBottom="40dp"
                            android:background="@drawable/rectangle_button_drawable"
                            android:text="@string/later"
                            android:textAllCaps="false"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>


            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<Button-->
            <!--android:id="@+id/btnoffer"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginTop="-100dp"-->
            <!--android:layout_marginBottom="40dp"-->
            <!--android:background="@drawable/rectangle_button_drawable"-->
            <!--android:text="@string/submit"-->
            <!--android:textAllCaps="false" />-->

            <!--</RelativeLayout>-->

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>